@@ -1,5 +1,10 @@
 2007-04-06 Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/event_monitor.py: 
+	* src/lib/accerciser/accerciser.py: Changed the default global hotkeys.
+
+2007-04-06 Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/event_monitor.glade: Put monitor options in paned
 	instead of an expander (bug 425474)
 	* plugins/event_monitor.py: Put save dialog inline with run()
